--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <title>Pratiksha Blogs</title>
 </head>
 <body>
+   <h1>Handpicked Java Learning</h1>
   
   <div class="container">
     <div class="box">
